# FairXAI

./: .gitignore  LICENSE  README.md  cleanup.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: main-validation.yml  pr-quick-ci.yml
configs/: README.md
configs/datasets/: registry.yaml
configs/domain/: cardiac.yaml  cardiac_feature_map.yaml  dermatology.yaml  dermatology_feature_map.yaml
configs/experiments/: age_binning.yaml  baseline.yaml  clustering.yaml  combinatorial.yaml  comparison.yaml  feature_selection_study.yaml  hpo.yaml  mitigation.yaml
configs/models/: logistic_regression.yaml  random_forest.yaml  svm.yaml  xgboost.yaml
configs/pipelines/: baseline.yaml  cardiac.yaml  dermatology.yaml
configs/profiling/: complexity.yaml
configs/recommendations/: thresholds.yaml
configs/schema/: cardiac.json  dermatology.json
data/: README.md
data/raw/cardiac/: cleveland_standardized.csv  kaggle_heart_standardized.csv
docs/: CHEATSHEET.md  DECISIONS.md  DERMATOLOGY.md  PLOTS.md  README.md  RESULTS_SCHEMA.md  ROADMAP.md  STYLE_GUIDE.md  TESTING.md  attribute-binning.md  cardiac_loky_worker_warning.md  dermatology_unknown_demographics.md  modules.md  pipeline-flow-control.md
docs/architecture/: decisions.md  modules.md  pipeline-flow-control.md
docs/guides/: cheat-sheet.md  style-guide.md  testing.md
docs/planning/: roadmap.md
docs/reference/: attribute-binning.md  plots.md  results-schema.md
docs/research/: dissertation-evidence-check.md
experiments/cardiac/baseline/: cleveland_feature_importance.csv  cleveland_test_predictions.csv  cleveland_train_predictions.csv  kaggle_heart_feature_importance.csv  kaggle_heart_test_predictions.csv  kaggle_heart_train_predictions.csv  training_results.json
experiments/cardiac/configs/: schema_mapping.json
flows/: cardiac_pipeline.py
hpc/: README.md  analysis.slurm  characterize.slurm  setup_hpc.sh
notebooks/: README.md  cardiac_eda.ipynb  cardiac_fairness_pipeline.ipynb  cardiac_profilling.ipynb
notebooks/experiments/: 01_age_binning_strategies.ipynb  02_mitigation_comparison.ipynb
notebooks/tables/cardiac/: profiling_complexity_metrics_available.csv  profiling_complexity_missing_warnings.csv  profiling_dataset_difficulty_ranking.csv  profiling_dataset_overview.csv  profiling_group_complexity_available.csv  profiling_predicted_fairness_risks.csv
results/cardiac/data_profiling/: dataset_summaries.json  loading_report.json
results/cardiac/fairness/: cleveland_data_profile.json  cleveland_fairness_assessment.json  cleveland_fairness_summary.csv  cleveland_test_fairness.json  cleveland_train_fairness.json  dataset_comparison.json  kaggle_heart_data_profile.json  (+5 more)
scripts/: README.md  cardiac_pipeline.sh  generate_dissertation_plots.py
scripts/analysis/: compare_experiments.py
scripts/cardiac/: age_binning.py  age_binning_analysis.py  assess_predictions.py  cardiac_pipeline.sh  cluster_subgroups.py  combinatorial.py  compare.py  generate_recommendations.py  load_data.py  mitigation.py  preprocess.py  profile.py  profile_data.py  similarity_analysis.py  train_baseline.py
scripts/common/: assess_predictions.py  generate_recommendations.py  load_data.py  preprocess_data.py  profile_data.py  train_baseline.py
scripts/data/: load_cardiac.py  preprocess_cardiac.py  profile_data.py
scripts/dermatology/: assess_predictions.py  compare.py  dermatology_pipeline.sh  explain.py  generate_recommendations.py  load_data.py  mitigate.py  preprocess.py  profile_data.py  train_baseline.py
scripts/experiments/: _gates.py  age_binning_analysis.py  mitigation_techniques.py  run_age_binning_analysis.py  run_attribute_binning_analysis.py  run_combinatorial_experiments.py  run_experiment_comparison.py  run_feature_selection_study.py  run_grouping_analysis.py  run_hpo.py  run_mitigation_comparison.py  train_baseline.py
scripts/fairness/: assess_predictions.py
scripts/models/: train_baseline.py
scripts/studies/: build_selector_contract.py  generate_dissertation_plots.py  generate_profiling_sensitivity_plots.py  run_feature_selection_study.py  run_grouping_analysis.py  run_hpo.py  run_profiling_sensitivity_study.py
src/fairxai/: __init__.py  cli.py
tests/: conftest.py
tests/integration/: test_clustering_pipeline.py  test_combinatorial_multi_model.py  test_compare_multi_model.py  test_multi_model_baseline.py
tests/unit/: test_age_binning_sensitivity.py  test_attribute_binning.py  test_clustering_engine.py  test_clustering_fairness.py  test_combinatorial_runner.py  test_dermatology_comparison.py  test_dermatology_fairness_figures.py  test_dermatology_pipeline_units.py  test_dermatology_readiness_figures.py  test_dissertation_studies.py  test_experiment_comparison.py  test_fairness_metrics.py  test_gpu_detection.py  test_grouping_pipeline.py  test_hpo_loader_and_threshold.py  test_image_assessment.py  test_image_explainability.py  test_image_mitigation.py  test_integration_clustering.py  test_memory_utils.py  test_mitigation_auc.py  test_model_wrapper_edge_cases.py  test_overfit_diagnostics.py  test_pipeline_flag_recognition.py  test_predictions_metadata.py  test_recommendations_data_quality.py  test_similarity_fairness.py  test_similarity_pipeline.py  test_synthetic.py  test_train_baseline_raw_meta.py  test_upload_profile.py  test_vision_early_stopping.py  test_viz_smoke.py
(+133 files in other folders)
